rename files and blocks

--- a/src/pug/pages/headers-footers/headers-footers.pug
+++ b/src/pug/pages/headers-footers/headers-footers.pug
@@ -3,14 +3,14 @@ include /components/header/header
 include /components/footer/footer
 include /components/logo/logo
 block variables
-  -var title = "headers&footers"
+  -var title = "headers & footers"
 block content
-  .content_headers-footers
-    header.ui-header
+  .headers-footers
+    header.headers-footers__header
       +logo()
-    .page__wrapper
+    .headers-footers__wrapper
       +header()
-    .page__wrapper
+    .headers-footers__wrapper
       +header("login")
-    .page__wrapper
+    .headers-footers__wrapper
       +footer()
