--- a/src/pug/pages/colors-types/colors-types.pug
+++ b/src/pug/pages/colors-types/colors-types.pug
@@ -1,68 +1,36 @@
 extends /pug/layouts/uikit
 include /components/logo/logo
+include /components/color-example/color-example
+include /components/type-example/type-example
 block variables
   -var title= "Colors & Types"
+  -
+    var colors = [
+      {color: "Dark Shade 100%", code: "#1F2041"},
+      {color: "Dark Shade 75%", code: "#1F2041"},
+      {color: "Dark Shade 50%", code: "#1F2041"},
+      {color: "Dark Shade 5%", code: "#1F2041"},
+      {color: "Purple", code: "#BC9CFF"},
+      {color: "Green", code: "#6FCF97"},
+    ]
+  -
+    var types = [
+      {tag: "H1", text: "This one is the sub-section or widget title"},
+      {tag: "H2", text: "Next one is the item title inside widgets"},
+      {tag: "H3", text: "This is a label or CTA text"},
+      {tag: "Body", text: `This is the body text which is used
+      for most of the design, like paragraphs, lists, etc.`},
+    ]
 block content
-  .content_colors-type
-    header.ui-header
+  .colors-types
+    header.colors-type__header
       +logo()
-    .container
-      .main
-        .colors__wrapper
-          .colors__item
-            .colors.dark-shade-100
-            .color__name
-              p Dark Shade 100%
-              p #1F2041
-          .colors__item
-            .colors.dark-shade-75
-            .color__name
-              p Dark Shade 75%
-              p #1F2041
-          .colors__item
-            .colors.dark-shade-50
-            .color__name
-              p Dark Shade 50%
-              p #1F2041
-          .colors__item
-            .colors.dark-shade-25
-            .color__name
-              p Dark Shade 25%
-              p #1F2041
-          .colors__item
-            .colors.dark-shade-5
-            .color__name
-              p Dark Shade 5%
-              p #1F2041
-          .colors__item
-            .colors.purple
-            .color__name
-              p Purple
-              p #BC9CFF
-          .colors__item
-            .colors.green
-            .color__name
-              p Green
-              p #6FCF97
-        .types
-          .type__wrapper.type__wrapper_size-xl
-            p.tag
-              |H1
-            p.font.sub-section-title
-              |This one is the sub-section or widget title
-          .type__wrapper.type__wrapper_size-l
-            p.tag
-              |H2
-            p.font.item-title
-              |Next one is the item title inside widgets
-          .type__wrapper.type__wrapper_size-s
-            p.tag
-              |H3
-            p.font.label-text
-              |This is a label or CTA text
-          .type__wrapper.type__wrapper_size-m
-            p.tag
-              |Body
-            p(class="font body-text")
-              |This is the body text which is used for most
-              |of the design, like paragraphs, lists, etc.
+    .colors-type__container
+      .colors-type__column
+        each color in colors
+          .colors-type__color
+            +color-exampmle(color)
+      .colors-type__column
+        each type in types
+          .colors-type__type
+            +type-example(type)
