--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -2,7 +2,7 @@ mixin range-slider(label, text)
   .range-slider__wrapper
     .range-slider__header
       span.range-slider__label= label
-      span.range-slider__value 
-    .range-slider
+      span.range-slider__value.js-range-slider__value
+    .range-slider.js-range-slider
     if text
       span.range-slider__text= text
