--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -1,7 +1,7 @@
 mixin checkbox(title, description)
-  label.check
-    input(class="check__input" type="checkbox" checked=attributes.checked)
-    span.check__box
+  label.checkbox
+    input(class="checkbox__input" type="checkbox" checked=attributes.checked)
+    span.checkbox__box
     if description
       span.checkbox__text.checkbox__text_rich
         span.checkbox__title
