--- a/src/pug/pages/cards/cards.scss
+++ b/src/pug/pages/cards/cards.scss
@@ -1,4 +1,10 @@
 .cards {
+  &__header {
+    margin-bottom: 70px;
+    margin-left: 30px;
+    padding-top: 30px;
+  }
+
   &__wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -17,10 +23,4 @@
     display: flex;
     flex-direction: column;
   }
-}
-
-.ui-header {
-  margin-bottom: 70px;
-  margin-left: 30px;
-  padding-top: 30px;
 }
