--- a/src/pug/pages/form-elements/form-elements.pug
+++ b/src/pug/pages/form-elements/form-elements.pug
@@ -15,7 +15,8 @@ include /components/range-slider/range-slider
 include /components/expandable-checkbox-list/expandable-checkbox-list
 include /components/date-dropdown/date-dropdown
 include /components/button/button
-  include /components/logo/logo
+include /components/logo/logo
+
 block variables
   -var title= "Form Elements"
   -var review = {name: 'Рулон Обоев', src: require('/src/assets/img/review/4el.jpg'), time: '5 дней назад', likes: '12', liked: true, comment: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'}
@@ -31,7 +32,7 @@ block content
           .text-field__wrapper
             +input-text({ label: 'text-field', placeholder: 'This is pretty awesome' })(autofocus)
           .text-field__wrapper
-            +subscription-field('text-field', 'Email')(autofocus)
+            +subscription-field({ label: 'subscription text field' })(autofocus)
         .text-field__wrapper
           +dropdown({label : 'гости', items: ['взрослые', 'дети', 'младенцы'], type: 'js-guest', holder: 'Сколько гостей'})
         .text-field__wrapper
