--- a/src/components/reservation-form/reservation-form.pug
+++ b/src/components/reservation-form/reservation-form.pug
@@ -7,23 +7,23 @@ mixin reservation-form(luxury)
       .reservation-form__header
         .reservation-form__room-number
           span.reservation-form__room-number-sign №
-          span  888
+          span &nbsp;888
           if luxury
-            span.reservation-form__luxury-text люкс
+            span.reservation-form__luxury-text &nbsp;люкс
         .reservation-form__price-per-day
-          span 9&nbsp990₽
-          span.reservation-form__price-per-day-text в сутки
+          span 9&nbsp;990₽
+          span.reservation-form__price-per-day-text &nbsp;в сутки
       .reservation-form__date-dropdown
         +date-dropdown('прибытие', 'выезд')
       .reservation-form__dropdown
         +dropdown({label: 'гости', items:['взрослые', 'дети', 'младенцы'], type:'js-guest', holder: 'Сколько гостей'})
       .reservation-form__prices
         .reservation-form__prices-item
-          span.reservation-form__prices-item-text 9&nbsp990₽ х 4 суток
+          span.reservation-form__prices-item-text 9&nbsp;990₽ х 4 суток
           span.reservation-form__prices-item-price 39&nbsp960₽
         .reservation-form__prices-item
           .reservation-form__prices-item-text
-            p Сбор за услуги: скидка 2 179₽
+            p Сбор за услуги: скидка 2&nbsp;179₽
             .reservation-form__prices-item-info
               img(class="reservation-form__info-icon" src=require("/src/assets/img/icons/info.svg"), alt="icon")
               span.reservation-form__tooltip подсказка
