--- a/src/components/reservation-form/reservation-form.scss
+++ b/src/components/reservation-form/reservation-form.scss
@@ -1,7 +1,7 @@
 .reservation-form {
   max-width: 380px;
   background-color: #fff;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
 
   &__inner {
     padding: 40px 30px 30px;
@@ -48,11 +48,12 @@
     align-self: end;
     color: $dark-shade-50;
     font-size: $mainFontSize;
+    text-transform: none;
     @extend %label-text;
   }
 
   &__prices {
-    margin-bottom: 30px;
+    margin-bottom: 35px;
   }
 
   &__prices-item {
