--- a/src/pug/pages/room-details/room-details.pug
+++ b/src/pug/pages/room-details/room-details.pug
@@ -47,7 +47,7 @@ block content
           .room-details__cancel-title
             h3.room-details__title Отмена
           p.room-details__cancel-text
-            |Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
+            |Бесплатная отмена в течение 48 ч. После этого при отмене не
+            |позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
         .room-details__reservation
           +reservation-form('luxury')
-          
