move pug and layouts folders to src

--- a/src/pages/colors-types/colors-types.pug
+++ b/src/pages/colors-types/colors-types.pug
@@ -1,4 +1,4 @@
-extends /pug/layouts/uikit
+extends /layouts/uikit
 include /components/logo/logo
 include /components/color-example/color-example
 include /components/type-example/type-example
