--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -1,4 +1,4 @@
-extends /pug/layouts/uikit
+extends /layouts/uikit
 include /components/input-text/input-text
 include /components/subscription-field/subscription-field
 include /components/checkbox/checkbox
