--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -1,4 +1,4 @@
-extends /pug/layouts/uikit
+extends /layouts/uikit
 include /components/header/header
 include /components/footer/footer
 include /components/logo/logo
