--- a/src/pages/landing-page/landing-page.pug
+++ b/src/pages/landing-page/landing-page.pug
@@ -1,4 +1,4 @@
-extends /pug/layouts/main
+extends /layouts/main
 include /components/search-form/search-form
 block variables
   -var title = "Toxin - Главная"
