--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -1,4 +1,4 @@
-extends /pug/layouts/main
+extends /layouts/main
 include /components/registration-form/registration-form
 block variables
   -var title = "Регистрация"
