--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -1,4 +1,4 @@
-extends /pug/layouts/main
+extends /layouts/main
 include /components/reservation-form/reservation-form
 include /components/about-room/about-room
 include /components/bullet-list/bullet-list
