--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -1,4 +1,4 @@
-extends /pug/layouts/main
+extends /layouts/main
 include /components/dropdown/dropdown
 include /components/date-dropdown/date-dropdown
 include /components/range-slider/range-slider
