--- a/src/pages/sign-in/sign-in.scss
+++ b/src/pages/sign-in/sign-in.scss
@@ -5,7 +5,7 @@
   min-height: 683px;
   padding: 0 20px;
   background: center 100% / cover no-repeat
-    url('../../../assets/img/backgrounds/registration-bg.jpg');
+    url('../../assets/img/backgrounds/registration-bg.jpg');
 
   &__login-form {
     width: 100%;
