--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -1,4 +1,4 @@
-extends /pug/layouts/uikit
+extends /layouts/uikit
 include /components/search-form/search-form
 include /components/registration-form/registration-form
 include /components/reservation-form/reservation-form
