--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,60 +1,53 @@
 include /components/logo/logo
 include /components/subscription-field/subscription-field
+include /components/social-link/social-link
 mixin footer()
+  -
+    var navigationLinks = ['О нас', 'Новости', 'Служба поддержки', 'Услуги']
+    var aboutUsLinks = ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы']
+    var supportLinks = ['Соглашения', 'Сообщества', 'Связь с нами']
+    var socialLinks = [
+      { link: 'https://twitter.com/toxin', img: 'twitter'},
+      { link: 'https://facebook.com/toxin', img: 'facebook'},
+      { link: 'https://instagram.com/toxin', img: 'instagram'}
+    ]
   footer.footer
-    .container__wrapper
-      .footer__container
-        .footer__wrapper
-          .footer__column.footer__column1
-            .footer__logo
-              +logo("text")
-            p.footer__description 
-              |Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
-          .footer__column.footer__column2
-            .footer__navigation
-              h3.footer__title навигация
-              ul.footer__list
-                li.footer__list-item
-                  a(class="footer__link" href="/mock-address") О нас
-                li.footer__list-item
-                  a(class="footer__link" href="/mock-address") Новости
-                li.footer__list-item
-                  a(class="footer__link" href="/mock-address") Служба поддержки
-                li.footer__list-item
-                  a(class="footer__link" href="/mock-address") Услуги
-          .footer__column.footer__column3
-            h3.footer__title о нас
+    .footer__container
+      .footer__wrapper
+        .footer__column3
+          .footer__logo
+            +logo("text")
+          p.footer__description
+            |Бронирование номеров в лучшем отеле 2019 года
+            |по версии ассоциации «Отельные взгляды»
+        .footer__column2
+          .footer__navigation
+            h3.footer__title навигация
             ul.footer__list
+              each link in navigationLinks
                 li.footer__list-item
-                  a(class="footer__link" href="/mock-address") О сервисе
+                  a(class="footer__link" href="/mock-address")= link
+        .footer__column2
+          h3.footer__title о нас
+          ul.footer__list
+            each link in aboutUsLinks
+              li.footer__list-item
+                a(class="footer__link" href="/mock-address")= link
+        .footer__column2
+            h3.footer__title Служба поддержки
+            ul.footer__list
+              each link in supportLinks
                 li.footer__list-item
-                  a(class="footer__link" href="/mock-address") Наша команда
-                li.footer__list-item
-                  a(class="footer__link" href="/mock-address") Вакансии
-                li.footer__list-item
-                  a(class="footer__link" href="/mock-address") Инвесторы
-          .footer__column.footer__column4
-              h3.footer__title Служба поддержки
-              ul.footer__list
-                li.footer__list-item
-                  a(class="footer__link" href="/mock-address") Соглашения
-                li.footer__list-item
-                  a(class="footer__link" href="/mock-address") Сообщества
-                li.footer__list-item
-                  a(class="footer__link" href="/mock-address") Связь с нами
-          .footer__column.footer__column5
-            h3.footer__title Подписка
-            p(class="footer__subscribe") Получайте специальные предложения и новости сервиса
-            +subscription-field('', 'Email')
-    .copyright
+                  a(class="footer__link" href="/mock-address")= link
+        .footer__column3
+          h3.footer__title Подписка
+          p(class="footer__subscribe") Получайте специальные предложения и новости сервиса
+          +subscription-field()
+    .footer__copyright
       .footer__container
-        .copyright__wrapper
-          p.copyright__text
+        .footer__copyright-wrapper
+          p.footer__copyright-text
             |Copyright © 2018 Toxin отель. Все права зачищены.
-          .social
-            a( class="social__link" href="https://twitter.com/toxin")
-              img(class="social__icon" src=require("/src/assets/img/icons/twitter.svg"), alt="twitter")
-            a( class="social__link" href="https://facebook.com/toxin")
-              img(class="social__icon" src=require("/src/assets/img/icons/facebook.svg"), alt="facebook")
-            a( class="social__link" href="https://instagram.com/toxin")  
-              img(class="social__icon" src=require("/src/assets/img/icons/instagram.svg"), alt="instagram")
+          .footer__social
+            each link in socialLinks
+              +social-link(link)
