--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,12 @@ html {
   background-color: $background-color;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 @media (max-width: $phoneWidth) {
   html {
     font-size: 90%;
