--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -41,6 +41,7 @@
   top: 70px;
   z-index: 20;
   display: none;
+  width: 100%;
   max-width: 320px;
   padding: 20px;
   font-size: 0.75rem;
@@ -49,6 +50,10 @@
   border: 1px solid $dark-shade-25;
   border-radius: 4px;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+
+  @media (max-width: $phoneWidth) {
+    padding: 20px 10px;
+  }
 
   &_open {
     display: block;
@@ -83,22 +88,28 @@
   }
 
   &__days-container {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    width: 100%;
     margin-bottom: 20px;
   }
 
   &__day {
     position: relative;
-    display: inline-block;
-    width: 14.2%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     height: 40px;
     color: $dark-shade-25;
     font-size: 0.75rem;
     font-family: $mainFont;
-    line-height: 40px;
     text-align: center;
     cursor: pointer;
+
+    @media (max-width: $smPhoneWidth) {
+      height: 35px;
+    }
 
     &_active {
       color: $dark-shade-50;
