--- a/src/components/reservation-form/reservation-form.scss
+++ b/src/components/reservation-form/reservation-form.scss
@@ -5,6 +5,10 @@
 
   &__inner {
     padding: 40px 30px 30px;
+
+    @media (max-width: $phoneWidth) {
+      padding: 30px 20px 20px;
+    }
   }
 
   &__header {
