--- a/src/components/search-form/search-form.scss
+++ b/src/components/search-form/search-form.scss
@@ -1,10 +1,14 @@
 .search-form {
   max-width: 380px;
   background-color: #fff;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
 
   &__inner {
     padding: 40px 30px 30px;
+
+    @media (max-width: $phoneWidth) {
+      padding: 30px 20px 20px;
+    }
   }
 
   &__title {
