--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -5,6 +5,10 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
+
+    @media (max-width: $phoneWidth) {
+      padding: 0 10px;
+    }
   }
 
   &__pictures {
