--- a/src/components/radio/radio.scss
+++ b/src/components/radio/radio.scss
@@ -15,6 +15,10 @@
       box-shadow: 0 0 0 1px $purple-color;
     }
 
+    &:checked ~ .radio__label {
+      color: $dark-shade-75;
+    }
+
     &:focus + .radio__button {
       box-shadow: 0 0 0 1px $dark-shade-25, 0 0 0 2px $purple-color;
     }
@@ -27,9 +31,5 @@
     margin-left: -30px;
     border-radius: 50%;
     box-shadow: 0 0 0 1px $dark-shade-25;
-  }
-
-  &__label:not(:last-child) {
-    margin-right: 20px;
   }
 }
