make wrapper for radio buttons

--- a/src/components/registration-form/registration-form.scss
+++ b/src/components/registration-form/registration-form.scss
@@ -19,6 +19,10 @@
   &__radio {
     display: flex;
     margin-bottom: 25px;
+
+    &-button + &-button {
+      margin-left: 20px;
+    }
   }
 
   &__masked-field {
