--- a/src/components/registration-form/registration-form.pug
+++ b/src/components/registration-form/registration-form.pug
@@ -12,8 +12,10 @@ mixin registration-form()
         .text-fields__inner
           +input-text({ placeholder: 'Фамилия' })
       .registration-form__radio
-        +radio('Мужчина')(name='name', checked)
-        +radio('Женщина')(name='name')
+        .registration-form__radio-button
+          +radio('Мужчина')(name='name', checked)
+        .registration-form__radio-button
+          +radio('Женщина')(name='name')
       .registration-form__masked-field
         +input-text({ label: 'дата рождения', placeholder: 'ДД.ММ.ГГГГ', mask: 'mask' })
       .registration-form__text-fields
