add cursor pointer

--- a/src/components/radio/radio.scss
+++ b/src/components/radio/radio.scss
@@ -5,6 +5,7 @@
   font-size: 0.875rem;
   font-family: $mainFont;
   line-height: $mainLineHeight;
+  cursor: pointer;
 
   &__input {
     appearance: none;
