--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -4,6 +4,7 @@
   color: $dark-shade-75;
   font-size: $mainFontSize;
   font-family: $mainFont;
+  cursor: pointer;
 
   &__button {
     appearance: none;
