--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -2,10 +2,8 @@
   font-weight: 700;
   font-family: 'Montserrat';
   font-style: normal;
-  src: url('../../assets/fonts/montserrat-bold-webfont.woff2') format('woff2'),
-    url('../../assets/fonts/montserrat-bold-webfont.woff') format('woff'),
-    url('../../assets/fonts/montserrat-bold-webfont.ttf') format('truetype'),
-    url('../../assets/fonts/montserrat-bold-webfont.svg#Montserrat') format('svg');
+  src: url('/src/assets/fonts/montserrat-bold-webfont.woff2') format('woff2'),
+    url('/src/assets/fonts/montserrat-bold-webfont.woff') format('woff');
   font-display: swap;
 }
 
@@ -13,9 +11,7 @@
   font-weight: 400;
   font-family: 'Montserrat';
   font-style: normal;
-  src: url('../../assets/fonts/montserrat-regular-webfont.woff2') format('woff2'),
-    url('../../assets/fonts/montserrat-regular-webfont.woff') format('woff'),
-    url('../../assets/fonts/montserrat-regular-webfont.ttf') format('truetype'),
-    url('../../assets/fonts/montserrat-regular-webfont.svg#Montserrat') format('svg');
+  src: url('/src/assets/fonts/montserrat-regular-webfont.woff2') format('woff2'),
+    url('/src/assets/fonts/montserrat-regular-webfont.woff') format('woff');
   font-display: swap;
 }
