--- a/src/components/rate-button/rate-button.scss
+++ b/src/components/rate-button/rate-button.scss
@@ -1,10 +1,10 @@
 .rate {
   position: relative;
   display: flex;
-  gap: 10px;
   width: 120px;
   height: 24px;
-  background: url('/src/assets/img/icons/off.svg') repeat-x;
+  background-image: url('/src/assets/img/icons/bordered-star.svg');
+  background-repeat: repeat-x;
   background-size: 24px auto;
 
   &__star {
@@ -16,6 +16,7 @@
     margin: 0;
     font-size: inherit;
     appearance: none;
+    background-size: 24px auto;
 
     &:nth-of-type(1) {
       z-index: 5;
@@ -43,8 +44,8 @@
     }
 
     &:checked {
-      background: url('/src/assets/img/icons/on.svg') repeat-x;
-      background-size: 24px auto;
+      background-image: url('/src/assets/img/icons/filled-star.svg');
+      background-repeat: repeat-x;
     }
   }
 }
