--- a/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
+++ b/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
@@ -1,16 +1,10 @@
-mixin expandable-checkbox-list(label)
-  -
-    var labels = [
-      'Завтрак', 'Письменный стол',
-      'Стул для кормления', 'Кроватка'
-    ]
-
+mixin expandable-checkbox-list(label, list)
   .expandable-checkbox__list.js-expandable-checkbox__list
     .expandable-checkbox__wrapper.js-expandable-checkbox__wrapper
       span.expandable-checkbox__label= label
       button.expandable-checkbox__button-expand.js-expandable-checkbox__button-expand
         img(class="checkbox-button js-checkbox-button" src=require("/src/assets/img/icons/expand-more.svg"), alt="expand")
     ul.expandable-checkbox__items.js-expandable-checkbox__items
-      each label in labels
+      each item in checkboxList
         li.expandable-checkbox__item
-          +checkbox(label)
+          +checkbox(item.label)(checked = item.checked)
