--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -20,6 +20,12 @@ include /components/logo/logo
 block variables
   -var title= "Form Elements"
   -var review = {name: 'Рулон Обоев', src: require('/src/assets/img/review/4el.jpg'), time: '5 дней назад', likes: '12', liked: true, comment: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'}
+  -
+    var checkboxList = [
+      { label: 'Завтрак' }, { label: 'Письменный стол', checked: true },
+      { label: 'Стул для кормления', checked: true }, { label: 'Кроватка', checked: true },
+      { label: 'Телевизор' }, { label: 'Шампунь' }
+    ]
 block content
   .content_form-elements
     header.form-elements__header
@@ -44,7 +50,7 @@ block content
         .text-field__wrapper
           +date-dropdown('filter date dropdown')
         .text-field__wrapper
-          +expandable-checkbox-list('expandable checkbox list')
+          +expandable-checkbox-list('expandable checkbox list', checkboxList)
       .form-elements__wrapper
         .form-elements__inner
           h3.form-elements__title Checkbox Buttons
