add missed block #2

--- a/src/pages/colors-types/colors-types.pug
+++ b/src/pages/colors-types/colors-types.pug
@@ -9,6 +9,7 @@ block variables
       {color: "Dark Shade 100%", code: "#1F2041"},
       {color: "Dark Shade 75%", code: "#1F2041"},
       {color: "Dark Shade 50%", code: "#1F2041"},
+      {color: "Dark Shade 25%", code: "#1F2041"},
       {color: "Dark Shade 5%", code: "#1F2041"},
       {color: "Purple", code: "#BC9CFF"},
       {color: "Green", code: "#6FCF97"},
