--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   background: #fff;
-  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+  box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
 
   &__container {
     display: flex;
@@ -15,6 +15,8 @@
   &__navigation-list {
     display: flex;
     align-items: center;
+    list-style: none;
+    padding: 0;
 
     @media screen and (max-width: $smDesktopWidth) {
       position: fixed;
@@ -25,7 +27,7 @@
       flex-direction: column;
       justify-content: space-around;
       width: 100%;
-      height: 100vh;
+      min-height: 100vh;
       background: #fff;
       visibility: hidden;
       opacity: 0;
@@ -47,63 +49,6 @@
 
     @media screen and (max-width: $smDesktopWidth) {
       margin: 0;
-    }
-  }
-
-  &__navigation-link {
-    display: block;
-    color: $dark-shade-50;
-    line-height: 1.2;
-    cursor: pointer;
-    @extend %body-text;
-
-    @media screen and (max-width: $phoneWidth) {
-      font-size: 18px;
-    }
-
-    &_expand {
-      padding-right: 17px;
-    }
-
-    &_expand::after {
-      position: absolute;
-      top: 2px;
-      right: 0;
-      width: 9px;
-      height: 9px;
-      border-top: 2px solid $dark-shade-75;
-      border-right: 2px solid $dark-shade-75;
-      transform: rotate(135deg);
-      content: '';
-    }
-
-    img {
-      margin-left: 7px;
-      transform: translateY(-25%);
-    }
-  }
-
-  &__navigation-dropdown {
-    display: none;
-    width: 120px;
-    padding: 0 5px 10px;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
-
-    &_active {
-      position: absolute;
-      left: 50%;
-      z-index: 2;
-      display: flex;
-      flex-direction: column;
-      background-color: #fff;
-      transform: translateX(-50%);
-    }
-
-    li {
-      margin-top: 10px;
-      text-align: center;
     }
   }
 
@@ -133,6 +78,7 @@
 
   &__burger {
     position: relative;
+    border: none;
     z-index: 20;
     display: none;
     width: 36px;
