--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -15,6 +15,7 @@
     width: 44px;
     height: 100%;
     background: none;
+    border: 0;
     cursor: pointer;
   }
 
@@ -152,6 +153,7 @@
   &__button {
     width: 24px;
     height: 24px;
+    border: 0;
     cursor: pointer;
 
     &_prev {
