--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,9 +1,13 @@
 .button {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
   padding: 0;
   color: $purple-color;
   line-height: 1;
   text-align: center;
+  text-decoration: none;
   background: none;
   border: 0;
   cursor: pointer;
