--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -8,7 +8,7 @@
   }
 
   &__label {
-    margin-bottom: 5px;
+    margin: 0 0 5px;
     @extend %label-text;
   }
 
@@ -50,7 +50,9 @@
   }
 
   &__list {
-    margin-bottom: 20px;
+    margin: 0 0 20px;
+    padding: 0;
+    list-style: none;
   }
 
   &__item {
@@ -79,6 +81,7 @@
     &-button {
       width: 30px;
       height: 30px;
+      border: 0;
       border-radius: 50%;
       cursor: pointer;
 
@@ -102,6 +105,7 @@
     width: 44px;
     height: 100%;
     background: none;
+    border: 0;
     cursor: pointer;
   }
 
