--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -6,7 +6,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 8px;
+    margin: 0 0 8px 0;
+    padding: 0;
+    list-style: none;
   }
 
   &__item {
@@ -36,6 +38,7 @@
     font-style: normal;
     line-height: 1.25;
     text-align: center;
+    text-decoration: none;
     border-radius: 22px;
   }
 
