--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -4,8 +4,8 @@
   grid-template-areas: '. aside content .';
   grid-template-columns: auto 266px minmax(320px, 835px) auto;
   width: 100%;
-  margin-top: 30px;
-  margin-bottom: 75px;
+  margin-top: 25px;
+  margin-bottom: 55px;
   column-gap: 60px;
 
   @media screen and (max-width: $tableWidth) {
@@ -46,7 +46,7 @@
 
   &__checkbox {
     max-width: 223px;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
 
     &:nth-child(5) {
       max-width: 260px;
@@ -54,11 +54,11 @@
   }
 
   &__comfort {
-    margin-bottom: 15px;
+    margin-bottom: 30px;
   }
 
   &__title {
-    margin-bottom: 20px;
+    margin: 0 0 20px;
     @extend %sub-section-title;
   }
 
@@ -74,7 +74,7 @@
     margin-bottom: 40px;
     column-gap: 12px;
     place-items: center;
-    row-gap: 22px;
+    row-gap: 20px;
 
     @media screen and (max-width: $phoneWidth) {
       justify-items: center;
