--- a/src/components/search-form/search-form.scss
+++ b/src/components/search-form/search-form.scss
@@ -12,7 +12,7 @@
   }
 
   &__title {
-    margin-bottom: 21px;
+    margin: 0 0 21px 0;
     @extend %sub-section-title;
   }
 
@@ -21,6 +21,6 @@
   }
 
   &__dropdown {
-    margin-bottom: 30px;
+    margin-bottom: 35px;
   }
 }
