--- a/src/components/expandable-checkbox-list/expandable-checkbox-list.scss
+++ b/src/components/expandable-checkbox-list/expandable-checkbox-list.scss
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px 0;
+  list-style: none;
   background-color: #fff;
   transform: translateY(-20%);
   visibility: hidden;
