--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -1,5 +1,6 @@
 extends /layouts/uikit
 include /components/search-form/search-form
+include /components/date-dropdown/date-dropdown
 include /components/registration-form/registration-form
 include /components/reservation-form/reservation-form
 include /components/login-form/login-form
@@ -24,6 +25,8 @@ block content
         .cards__item
           +login-form()
       .cards__column
+        .cards__item
+          +date-dropdown({ label1: 'прибытие', container: 'js-cards-date-dropdown' })
         .cards__item
           +room-card({luxury: true, number: 888, price: "9 900₽", star: 5, reviews: 145, images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg',]})
         .cards__item
