--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -7,7 +7,7 @@
 
   &__wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 380px 380px 320px;
     max-width: 1160px;
     margin: 0 auto;
     padding: 0 20px;
