--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -18,94 +18,170 @@ include /components/button/button
 include /components/logo/logo
 
 block variables
-  -var title= "Form Elements"
-  -var review = {name: 'Рулон Обоев', src: require('/src/assets/img/review/4el.jpg'), time: '5 дней назад', likes: '12', liked: true, comment: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'}
+  -var title = "Form Elements"
+  -
+    var review = {
+      name: 'Рулон Обоев',
+      src: require('/src/assets/img/review/4el.jpg'),
+      time: '5 дней назад',
+      likes: '12',
+      liked: true,
+      comment: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'
+    }
   -
     var checkboxList = [
       { label: 'Завтрак' }, { label: 'Письменный стол', checked: true },
       { label: 'Стул для кормления', checked: true }, { label: 'Кроватка', checked: true },
       { label: 'Телевизор' }, { label: 'Шампунь' }
     ]
+  -
+    var aboutRoomItems = [
+      {src: require("/src/assets/img/icons/insert-emoticon.svg"), title: "Комфорт", text: "Шумопоглощающие стены"},
+      {src: require("/src/assets/img/icons/location-city.svg"), title: "Удобство", text: "Окно в каждой из спален"},
+    ]
 block content
   .content_form-elements
     header.form-elements__header
       +logo()
     .form-elements
-      .form-elements__wrapper
-        .form-elements__inner
-          .text-field__wrapper
+      .form-elements__row
+        .form-elements__column
+          .form-elements__block
             +input-text({ label: 'text field', placeholder: 'Email', type: 'email' })
-          .text-field__wrapper
+          .form-elements__block
             +input-text({ label: 'text-field', placeholder: 'This is pretty awesome' })(autofocus)
-          .text-field__wrapper
-            +subscription-field({ label: 'subscription text field' })(autofocus)
-        .text-field__wrapper
-          +dropdown({label : 'гости', items: ['взрослые', 'дети', 'младенцы'], type: 'js-guest', holder: 'Сколько гостей'})
-        .text-field__wrapper
-          +dropdown({label: 'удобства номера', items: ['спальни', 'кровати', 'ванные комнаты'], type: 'js-comfort', holder: 'Удобства'})
-        .text-field__wrapper
-          +input-text({ label: 'masked text field', placeholder: 'ДД.ММ.ГГГГ', mask: 'mask' })
-        .text-field__wrapper
-          +date-dropdown('date Dropdown', 'date Dropdown')
-        .text-field__wrapper
-          +date-dropdown('filter date dropdown')
-        .text-field__wrapper
-          +expandable-checkbox-list('expandable checkbox list', checkboxList)
-      .form-elements__wrapper
-        .form-elements__inner
-          h3.form-elements__title Checkbox Buttons
-          .form-elements__checkbox
-            +checkbox('Можно курить')
-            +checkbox('Можно с питомцами')(checked)
-            +checkbox('Можно пригласить гостей (до 10 человек)')(checked)
-        .form-elements__inner
-          h3.form-elements__title Radio buttons
-          .form-elements__radio
-            .form-elements__radio-button
-              +radio('Мужчина')(name='gender' checked)
-            .form-elements__radio-button
-              +radio('Женщина')(name='gender')
-        .form-elements__inner
-          h3.form-elements__title Toggle
-          .form-elements__toggle
-            +toggle('Получать спецпредложения')(class="toggle__inner" checked)
-            +toggle('Получать спецпредложения')
-        .form-elements__inner
-          h3.form-elements__title like button
-          .form-elements__button-like
-            +button-like(2)(class="button-like__inner")
-            +button-like(12)(class="button-like_active")
-        .form-elements__inner
-          h3.form-elements__title Rate button
-          .form-elements__rate
-            +rate-button(4, "rating1")(class="rate__inner")
-            +rate-button(5, "rating2")
-        .form-elements__inner
-          h3.form-elements__title Checkbox Buttons
-          .form-elements__checkbox
-            +checkbox('Широкий коридор', 'Ширина коридоров в номере не менее 91 см.')
-            +checkbox('Помощник для инвалидов', 'На 1 этаже вас встретит специалист  и проводит до номера.')
-      .form-elements__wrapper
-        .form-elements__inner
-          +range-slider("Range Slider")
-        .form-elements__inner
-          h3.form-elements__title Buttons
-          .form-elements__buttons
-            +button({'color': 'blue', 'tag': 'button', 'text': 'click me', "size": "m"})
-          .form-elements__buttons
-            +button({'color': 'white', 'tag': 'button', 'text': 'click me', "size": "m"})
-          .form-elements__buttons
-            +button({ 'color': 'transparent', 'tag': 'button', 'text': 'click me', "size": "m"})
-          +button({ 'color': 'arrow', 'tag': 'button', 'text': 'перейти к оплате', "size": "m"})
-        .form-elements__pagination
-          h3.form-elements__title pagination
-          +pagination()
-        .form-elements__inner
-          h3.form-elements__title bullet list
-          +bullet-list(["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"])
-      .form-elements__wrapper
-        .form-elements__about-room
-          +about-room(require('/src/assets/img/icons/insert-emoticon.svg'), 'Комфорт', 'Шумопоглощающие стены')
-          +about-room(require('/src/assets/img/icons/location-city.svg'), 'Удобство', 'Окно в каждой из спален')
-        .form-elements__review
-          +review(review)
+          .form-elements__block
+            +dropdown({
+              label: 'гости',
+              items: ['взрослые', 'дети', 'младенцы'],
+              container: 'js-guest',
+              holder: 'Сколько гостей',
+              buttons: true
+            })
+          .form-elements__block
+            +input-text({ label: 'masked text field', placeholder: 'ДД.ММ.ГГГГ', mask: true })
+          .form-elements__block.form-elements__block_margin-large
+            +date-dropdown({ label1: 'date Dropdown', label2: 'date Dropdown', container: 'js-double-date' })
+          .form-elements__block.form-elements__block_margin-large.form-elements__block_size_s
+            +date-dropdown({ label1: 'filter date dropdown', container: 'js-filter-date' })
+          .form-elements__block.form-elements__block_margin-large
+            +subscription-field({ label: 'subscription text field' })
+        .form-elements__column
+          .form-elements__block.form-elements__block_margin-large
+            h3.form-elements__title Checkbox Buttons
+            .form-elements__checkbox
+              +checkbox('Можно курить')
+              +checkbox('Можно с питомцами')(checked)
+              +checkbox('Можно пригласить гостей (до 10 человек)')(checked)
+          .form-elements__block.form-elements__block_margin-large
+            h3.form-elements__title Radio buttons
+            .form-elements__radio
+              .form-elements__radio-button
+                +radio('Мужчина')(name='gender' checked)
+              .form-elements__radio-button
+                +radio('Женщина')(name='gender')
+          .form-elements__block.form-elements__block_margin-large
+            h3.form-elements__title Toggle
+            .form-elements__toggle
+              +toggle('Получать спецпредложения')(checked)
+              +toggle('Получать спецпредложения')
+          .form-elements__block.form-elements__block_margin-large
+            h3.form-elements__title like button
+            .form-elements__button-like
+              +button-like(2)(class="button-like__inner")
+              +button-like(12)(class="button-like_active")
+          .form-elements__block.form-elements__block_margin-large
+            h3.form-elements__title Rate button
+            .form-elements__rate
+              +rate-button(4, "rating1")
+              +rate-button(5, "rating2")
+        .form-elements__column
+          .form-elements__block.form-elements__block_margin-large
+            +range-slider("Range Slider")
+          .form-elements__block.form-elements__block_margin-large
+            h3.form-elements__title Buttons
+            .form-elements__buttons
+              +button({ 'color': 'blue', 'tag': 'button', 'text': 'click me', "size": "m" })
+              +button({ 'color': 'blue', 'tag': 'button', 'text': 'click me', "size": "m" })
+            .form-elements__buttons
+              +button({ 'color': 'white', 'tag': 'button', 'text': 'click me', "size": "m" })
+              +button({ 'color': 'white', 'tag': 'button', 'text': 'click me', "size": "m" })
+            .form-elements__buttons
+              +button({ 'color': 'transparent', 'tag': 'button', 'text': 'click me', "size": "m" })
+              +button({ 'color': 'transparent', 'tag': 'button', 'text': 'click me', "size": "m" })
+            +button({ 'color': 'arrow', 'tag': 'button', 'text': 'перейти к оплате', "size": "m" })
+          .form-elements__block.form-elements__block_margin-large
+            h3.form-elements__title pagination
+            +pagination()
+      .form-elements__row
+        .form-elements__column
+          .form-elements__block.form-elements__block_size_s
+            +dropdown({
+              label: 'удобства номера',
+              items: ['спальни', 'кровати', 'ванные комнаты'],
+              container: 'js-comfort',
+              holder: 'Удобства'
+            })
+          .form-elements__block.form-elements__block_size_s
+            +dropdown({
+              label: 'удобства номера',
+              items: ['спальни', 'кровати', 'ванные комнаты'],
+              container: 'js-comfort-opened',
+              holder: 'Удобства',
+              opened: true
+            })
+        .form-elements__column
+          .form-elements__block
+            +dropdown({
+              label: 'гости',
+              items: ['взрослые', 'дети', 'младенцы'],
+              container: 'js-zero-guest-opened',
+              holder: 'Сколько гостей',
+              buttons: true,
+              opened: true
+            })
+        .form-elements__column
+          .form-elements__block
+            +dropdown({
+              label: 'гости',
+              items: ['взрослые', 'дети', 'младенцы'],
+              container: 'js-guest-opened',
+              holder: 'Сколько гостей',
+              buttons: true,
+              opened: true
+            })
+      .form-elements__row
+        .form-elements__column
+          .form-elements__block.form-elements__block_size_s
+            +expandable-checkbox-list({
+              label: 'expandable checkbox list',
+              list: checkboxList,
+              container: 'js-expand-box'
+            })
+          .form-elements__block.form-elements__block_size_s
+            +expandable-checkbox-list({
+              label: 'expandable checkbox list',
+              list: checkboxList,
+              container: 'js-expand-box-opened',
+              opened: true
+            })
+        .form-elements__column
+          .form-elements__block
+            h3.form-elements__title Checkbox Buttons
+            .form-elements__checkbox
+              +checkbox('Широкий коридор', 'Ширина коридоров в номере не менее 91 см.')
+              +checkbox('Помощник для инвалидов', 'На 1 этаже вас встретит специалист  и проводит до номера.')
+        .form-elements__column
+          .form-elements__block
+            h3.form-elements__title bullet list
+            +bullet-list([
+              "Нельзя с питомцами",
+              "Без вечеринок и мероприятий",
+              "Время прибытия — после 13:00, а выезд до 12:00"])
+      .form-elements__row
+        .form-elements__column
+          .form-elements__block
+            +about-room(aboutRoomItems)
+        .form-elements__column.form-elements__column_l
+          .form-elements__block
+            +review(review)
