--- a/src/components/about-room/about-room.scss
+++ b/src/components/about-room/about-room.scss
@@ -1,32 +1,7 @@
 .about-room {
-  display: grid;
-  grid-template-rows: auto auto;
-  grid-template-columns: 48px auto;
-  align-items: center;
-  justify-items: center;
-  column-gap: 10px;
-
-  &__title {
-    grid-row: 1 / 2;
-    grid-column: 2 / 3;
-    justify-self: start;
-    color: $dark-shade-75;
-    font-size: $mainFontSize;
-    @extend %item-title;
-  }
-
-  &__text {
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
-    justify-self: start;
-    color: $dark-shade-75;
-    font-size: $mainFontSize;
-    font-family: $mainFont;
-    line-height: $largeLineHeight;
-  }
-
-  &__img {
-    grid-row: 1 / 3;
-    grid-column: 1 / 2;
+  &__item + &__item {
+    margin-top: 23px;
+    padding-top: 23px;
+    border-top: 1px solid $dark-shade-5;
   }
 }
