--- a/src/components/radio/radio.scss
+++ b/src/components/radio/radio.scss
@@ -20,7 +20,7 @@
       color: $dark-shade-75;
     }
 
-    &:focus + .radio__button {
+    &:focus-visible + .radio__button {
       box-shadow: 0 0 0 1px $dark-shade-25, 0 0 0 2px $purple-color;
     }
   }
